stuPydParser.py
# Generated from D:/stuPYd/stupyd_demo_4\stuPyd.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class stuPydParser ( Parser ):

    grammarFileName = "stuPyd.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#DECOMPILE'", "';'", "'->'", "'num'", 
                     "'bool'", "'string'", "'void'", "'struct'", "','", 
                     "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'^'", "'('", 
                     "')'", "'|'", "'&'", "'='", "'>'", "'<'", "'>='", "'<='", 
                     "'!'", "'TRUE'", "'FALSE'", "'while'", "':'", "'if'", 
                     "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "NEWLINE", "BLANK", "ID", "INT", 
                      "FLOAT", "STRING", "CHAR", "INDENT", "DEDENT" ]

    RULE_file_input = 0
    RULE_stmt = 1
    RULE_precom_stmt = 2
    RULE_simple_stmt = 3
    RULE_small_stmt = 4
    RULE_compound_stmt = 5
    RULE_gv_stmt = 6
    RULE_decls = 7
    RULE_decl = 8
    RULE_vartype = 9
    RULE_tarlist = 10
    RULE_target = 11
    RULE_subscription = 12
    RULE_prmy = 13
    RULE_expr = 14
    RULE_term = 15
    RULE_unary = 16
    RULE_factor = 17
    RULE_boolval = 18
    RULE_join = 19
    RULE_equality = 20
    RULE_rel = 21
    RULE_basebool = 22
    RULE_output = 23
    RULE_while_stmt = 24
    RULE_while_judge = 25
    RULE_if_stmt = 26
    RULE_if_judge = 27
    RULE_else_stmt = 28
    RULE_suite = 29

    ruleNames =  [ "file_input", "stmt", "precom_stmt", "simple_stmt", "small_stmt", 
                   "compound_stmt", "gv_stmt", "decls", "decl", "vartype", 
                   "tarlist", "target", "subscription", "prmy", "expr", 
                   "term", "unary", "factor", "boolval", "join", "equality", 
                   "rel", "basebool", "output", "while_stmt", "while_judge", 
                   "if_stmt", "if_judge", "else_stmt", "suite" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    NUMBER=33
    NEWLINE=34
    BLANK=35
    ID=36
    INT=37
    FLOAT=38
    STRING=39
    CHAR=40
    INDENT=41
    DEDENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class File_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(stuPydParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(stuPydParser.NEWLINE)
            else:
                return self.getToken(stuPydParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stuPydParser.StmtContext)
            else:
                return self.getTypedRuleContext(stuPydParser.StmtContext,i)


        def getRuleIndex(self):
            return stuPydParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)




    def file_input(self):

        localctx = stuPydParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stuPydParser.T__0) | (1 << stuPydParser.T__3) | (1 << stuPydParser.T__4) | (1 << stuPydParser.T__5) | (1 << stuPydParser.T__6) | (1 << stuPydParser.T__7) | (1 << stuPydParser.T__12) | (1 << stuPydParser.T__16) | (1 << stuPydParser.T__25) | (1 << stuPydParser.T__26) | (1 << stuPydParser.T__27) | (1 << stuPydParser.T__28) | (1 << stuPydParser.T__30) | (1 << stuPydParser.NUMBER) | (1 << stuPydParser.NEWLINE) | (1 << stuPydParser.ID) | (1 << stuPydParser.STRING))) != 0):
                self.state = 62
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [stuPydParser.NEWLINE]:
                    self.state = 60
                    self.match(stuPydParser.NEWLINE)
                    pass
                elif token in [stuPydParser.T__0, stuPydParser.T__3, stuPydParser.T__4, stuPydParser.T__5, stuPydParser.T__6, stuPydParser.T__7, stuPydParser.T__12, stuPydParser.T__16, stuPydParser.T__25, stuPydParser.T__26, stuPydParser.T__27, stuPydParser.T__28, stuPydParser.T__30, stuPydParser.NUMBER, stuPydParser.ID, stuPydParser.STRING]:
                    self.state = 61
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(stuPydParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_stmt(self):
            return self.getTypedRuleContext(stuPydParser.Compound_stmtContext,0)


        def simple_stmt(self):
            return self.getTypedRuleContext(stuPydParser.Simple_stmtContext,0)


        def precom_stmt(self):
            return self.getTypedRuleContext(stuPydParser.Precom_stmtContext,0)


        def getRuleIndex(self):
            return stuPydParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = stuPydParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [stuPydParser.T__28, stuPydParser.T__30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.compound_stmt()
                pass
            elif token in [stuPydParser.T__3, stuPydParser.T__4, stuPydParser.T__5, stuPydParser.T__6, stuPydParser.T__7, stuPydParser.T__12, stuPydParser.T__16, stuPydParser.T__25, stuPydParser.T__26, stuPydParser.T__27, stuPydParser.NUMBER, stuPydParser.ID, stuPydParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.simple_stmt()
                pass
            elif token in [stuPydParser.T__0]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.precom_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Precom_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stuPydParser.RULE_precom_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PreDecContext(Precom_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stuPydParser.Precom_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreDec" ):
                listener.enterPreDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreDec" ):
                listener.exitPreDec(self)



    def precom_stmt(self):

        localctx = stuPydParser.Precom_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_precom_stmt)
        try:
            localctx = stuPydParser.PreDecContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(stuPydParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stuPydParser.Small_stmtContext)
            else:
                return self.getTypedRuleContext(stuPydParser.Small_stmtContext,i)


        def NEWLINE(self):
            return self.getToken(stuPydParser.NEWLINE, 0)

        def getRuleIndex(self):
            return stuPydParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)




    def simple_stmt(self):

        localctx = stuPydParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.small_stmt()
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self.match(stuPydParser.T__1)
                    self.state = 78
                    self.small_stmt() 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==stuPydParser.T__1:
                self.state = 84
                self.match(stuPydParser.T__1)


            self.state = 87
            self.match(stuPydParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Small_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(stuPydParser.DeclsContext,0)


        def gv_stmt(self):
            return self.getTypedRuleContext(stuPydParser.Gv_stmtContext,0)


        def output(self):
            return self.getTypedRuleContext(stuPydParser.OutputContext,0)


        def getRuleIndex(self):
            return stuPydParser.RULE_small_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmall_stmt" ):
                listener.enterSmall_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmall_stmt" ):
                listener.exitSmall_stmt(self)




    def small_stmt(self):

        localctx = stuPydParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_small_stmt)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.gv_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.output()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(stuPydParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(stuPydParser.While_stmtContext,0)


        def getRuleIndex(self):
            return stuPydParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = stuPydParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compound_stmt)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [stuPydParser.T__30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.if_stmt()
                pass
            elif token in [stuPydParser.T__28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.while_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Gv_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stuPydParser.RULE_gv_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GvExpContext(Gv_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stuPydParser.Gv_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(stuPydParser.ExprContext,0)

        def prmy(self):
            return self.getTypedRuleContext(stuPydParser.PrmyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGvExp" ):
                listener.enterGvExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGvExp" ):
                listener.exitGvExp(self)


    class GvBoolContext(Gv_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stuPydParser.Gv_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolval(self):
            return self.getTypedRuleContext(stuPydParser.BoolvalContext,0)

        def prmy(self):
            return self.getTypedRuleContext(stuPydParser.PrmyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGvBool" ):
                listener.enterGvBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGvBool" ):
                listener.exitGvBool(self)



    def gv_stmt(self):

        localctx = stuPydParser.Gv_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_gv_stmt)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = stuPydParser.GvExpContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.expr(0)
                self.state = 99
                self.match(stuPydParser.T__2)
                self.state = 100
                self.prmy()
                pass

            elif la_ == 2:
                localctx = stuPydParser.GvBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.boolval(0)
                self.state = 103
                self.match(stuPydParser.T__2)
                self.state = 104
                self.prmy()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stuPydParser.DeclContext)
            else:
                return self.getTypedRuleContext(stuPydParser.DeclContext,i)


        def getRuleIndex(self):
            return stuPydParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)




    def decls(self):

        localctx = stuPydParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.decl()
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stuPydParser.T__3) | (1 << stuPydParser.T__4) | (1 << stuPydParser.T__5) | (1 << stuPydParser.T__6) | (1 << stuPydParser.T__7))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(stuPydParser.VartypeContext,0)


        def tarlist(self):
            return self.getTypedRuleContext(stuPydParser.TarlistContext,0)


        def getRuleIndex(self):
            return stuPydParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = stuPydParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.vartype()
            self.state = 114
            self.tarlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stuPydParser.RULE_vartype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVartype" ):
                listener.enterVartype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVartype" ):
                listener.exitVartype(self)




    def vartype(self):

        localctx = stuPydParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vartype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << stuPydParser.T__3) | (1 << stuPydParser.T__4) | (1 << stuPydParser.T__5) | (1 << stuPydParser.T__6) | (1 << stuPydParser.T__7))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def target(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stuPydParser.TargetContext)
            else:
                return self.getTypedRuleContext(stuPydParser.TargetContext,i)


        def getRuleIndex(self):
            return stuPydParser.RULE_tarlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarlist" ):
                listener.enterTarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarlist" ):
                listener.exitTarlist(self)




    def tarlist(self):

        localctx = stuPydParser.TarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tarlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.target()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==stuPydParser.T__8:
                self.state = 119
                self.match(stuPydParser.T__8)
                self.state = 120
                self.target()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TargetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stuPydParser.RULE_target

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TarSubContext(TargetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stuPydParser.TargetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def subscription(self):
            return self.getTypedRuleContext(stuPydParser.SubscriptionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarSub" ):
                listener.enterTarSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarSub" ):
                listener.exitTarSub(self)


    class TaridContext(TargetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stuPydParser.TargetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(stuPydParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarid" ):
                listener.enterTarid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarid" ):
                listener.exitTarid(self)



    def target(self):

        localctx = stuPydParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_target)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = stuPydParser.TaridContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(stuPydParser.ID)
                pass

            elif la_ == 2:
                localctx = stuPydParser.TarSubContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.subscription(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubscriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stuPydParser.RULE_subscription

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SubfinalContext(SubscriptionContext):
